# RTH-CommsDesk

./: .env working sample minus secrets  .env.example  .gitignore  AGENTS.md  README.md  StartApp.ps1  StartOver.txt  alembic.ini  pyproject.toml
_backups/: commsdesk_20260519_042815.db  commsdesk_20260519_043631.db  commsdesk_20260519_050045.db  commsdesk_20260519_051251.db
alembic/: env.py
app/: main.py
docs/: DEPLOYMENT.md  ENDGAME_ROADMAP.md  HELP.md  IMPLEMENTATION_LOG.md  LESSONS_LEARNED.md  LLM_SESSION_GUIDE.md  MICROSOFT_GRAPH_LOCAL_SMOKE.md  PHASE_PLAN.md  PHASE_STATUS.md  PROJECT_TRACKING.md  RESUME_HANDOFF.md  SECURITY_CHECKLIST.md  STALE_DOC_SCAN.md
scripts/: backup-commsdesk.ps1  reauth-commsdesk.ps1  smoke-commsdesk.ps1  smoke-mailbox-cleanup.ps1  start-commsdesk.ps1  test-gmail-cleanup-execution.ps1
tests/: conftest.py  test_admin_service.py  test_ai_analysis.py  test_app_bootstrap.py  test_attention_queue.py  test_attention_score.py  test_auth_flow.py  test_bulk_triage.py  test_calendar_availability.py  test_classifier.py  test_contact_importance.py  test_contact_intelligence.py  test_db_models.py  test_draft_generation.py  test_execution_service.py  test_execution_test_policy.py  test_external_connectors.py  test_external_provider_clients.py  test_feedback_service.py  test_gmail_connector.py  test_gmail_conversation_context.py  test_gmail_oauth_scopes.py  test_live_ai_client.py  test_mailbox_cleanup.py  test_microsoft_graph_client.py  test_operational_workflow.py  test_packaging.py  test_phase_18_6_visual_design.py  test_provider_status.py  (+10 more)
(+129 files in other folders)
